--- a/dive_club/templates/main/about.html
+++ b/dive_club/templates/main/about.html
@@ -5,26 +5,27 @@
 {% block content %}
 <div class="container mt-5">
     <h1 class="text-center animate__animated animate__fadeInDown">О нашем клубе</h1>
-    <p class="lead text-center animate__animated animate__fadeInUp">Здесь будет информация о вашем клубе, его истории и команде.</p>
 
     {% for item in content %}
         <div class="about-section mb-5">
             <h2 class="text-center animate__animated animate__fadeInDown">{{ item.title }}</h2>
-            <p class="text-justify animate__animated animate__fadeInUp">{{ item.content }}</p>
-            {% if item.images.all %}
             <div class="row">
-                {% for image in item.images.all %}
-                <div class="col-md-4 mb-4">
-                    <div class="card shadow-sm animate__animated animate__zoomIn">
+                {% if item.aboutpage_images.all %}
+                <div class="col-md-4">
+                    {% for image in item.aboutpage_images.all %}
+                    <div class="card shadow-sm animate__animated animate__zoomIn mb-4">
                         <img src="{{ image.image.url }}" class="card-img-top" alt="{{ image.caption }}">
                         <div class="card-body">
                             <p class="card-text">{{ image.caption }}</p>
                         </div>
                     </div>
+                    {% endfor %}
                 </div>
-                {% endfor %}
+                {% endif %}
+                <div class="col-md-8">
+                    <p class="text-justify animate__animated animate__fadeInUp">{{ item.content }}</p>
+                </div>
             </div>
-            {% endif %}
         </div>
     {% endfor %}
 </div>
